--- a/gbs/Vagrantfile
+++ b/gbs/Vagrantfile
@@ -2,20 +2,17 @@
 # vi: set ft=ruby :
 
 $bash = <<BASH
-    add-apt-repository ppa:ondrej/php
-    apt-get update
-    apt-get install -y language-pack-en apache2 samba samba-common-bin php5.6 php5.6-pdo php5.6-mysql php5.6-tokenizer php5.6-mcrypt php5.6-mbstring php5.6-openssl php5.6-xml nodejs npm mysql-server
-    npm install -g gulp-cli
-    npm install -g bower
+  yum -y update
+  yum -y install httpd php httpd-devel libxml2-devel mod_ssl
 BASH
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/trusty32"
+  config.vm.box = "boxcutter/ol72"
+  config.vm.network "private_network", ip: "69.69.69.69"
   # HTTP
   config.vm.network "forwarded_port", guest: 80, host: 8080
-  # MySQL
-  config.vm.network "forwarded_port", guest: 3306, host: 3306
-  config.vm.network "private_network", ip: "69.69.69.69"
+  # HTTPS
+  config.vm.network "forwarded_port", guest: 443, host: 5678
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
     vb.memory = "1024"
