--- a/pls/Vagrantfile
+++ b/pls/Vagrantfile
@@ -4,7 +4,9 @@
 $bash = <<BASH
   add-apt-repository ppa:ondrej/php
   apt-get update && apt-get -y upgrade
-  apt-get install -y language-pack-en apache2 samba samba-common-bin php5.6 php5.6-pdo php5.6-mysql php5.6-tokenizer php5.6-mcrypt php5.6-mbstring php5.6-openssl php5.6-xml php5.6-bcmath nodejs npm mysql-server
+  apt-get install -y language-pack-en apache2 samba samba-common-bin php5.6 \
+  php5.6-pdo php5.6-mysql php5.6-tokenizer php5.6-mcrypt php5.6-mbstring \
+  php5.6-openssl php5.6-xml php5.6-bcmath nodejs npm mysql-server php5.6-curl
   npm install -g gulp-cli
   npm install -g bower
 BASH
@@ -13,9 +15,9 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/xenial32"
   config.vm.network "private_network", ip: "69.96.69.96"
   # HTTP
-  config.vm.network "forwarded_port", guest: 80, host: 80
+  config.vm.network "forwarded_port", guest: 80, host: 49089
   # MySQL
-  config.vm.network "forwarded_port", guest: 3306, host: 3306
+  config.vm.network "forwarded_port", guest: 3306, host: 49090
   # prevent collision
   config.vm.network "forwarded_port", guest: 22, host: 60069, id: 'ssh'
   config.vm.provider "virtualbox" do |vb|
